--- a/index.html
+++ b/index.html
@@ -5,27 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Streaming Live</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+      }
+      #video-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: black; /* Optional: Black background */
+      }
+      #video {
+        width: 100%;
+        height: auto;
+      }
+      #text-below {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 16px;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+        padding: 5px 10px;
+        border-radius: 5px;
+      }
+    </style>
   </head>
   <body>
-    <video id="video" controls></video>
+    <div id="video-container">
+      <video id="video" controls></video>
+    </div>
     <script>
-      if (Hls.isSupported()) {
+      document.addEventListener("DOMContentLoaded", function () {
         var video = document.getElementById("video");
-        var hls = new Hls();
-        hls.loadSource(
-          "https://funn-g1163.huibo.tv/GM/H82/chunks.m3u8?p=46&cf=1744160911&d=&ip=133.106.206.78&e=1749161511&h=37acb96d998871e5a683aa13886bc596"
-        );
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-          video.play();
-        });
-      } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-        video.src =
-          "https://funn-g1163.huibo.tv/GM/H82/chunks.m3u8?p=46&cf=1744160911&d=&ip=133.106.206.78&e=1749161511&h=37acb96d998871e5a683aa13886bc596";
-        video.addEventListener("canplay", function () {
-          video.play();
-        });
-      }
+        if (Hls.isSupported()) {
+          var hls = new Hls();
+          hls.loadSource("https://funn-g1163.huibo.tv/GM/H82/chunks.m3u8?p=46&cf=1744160911&d=&ip=133.106.206.78&e=1749161511&h=37acb96d998871e5a683aa13886bc596");
+          hls.attachMedia(video);
+          hls.on(Hls.Events.MANIFEST_PARSED, function () {
+            video.play();
+          });
+        } else if (video.canPlayType("application/vnd.apple.mpegurl")) {
+          video.src ="https://funn-g1163.huibo.tv/GM/H82/chunks.m3u8?p=46&cf=1744160911&d=&ip=133.106.206.78&e=1749161511&h=37acb96d998871e5a683aa13886bc596";
+          video.addEventListener("canplay", function () {
+            video.play();
+          });
+        }
+
+        // Function to make the video fullscreen
+        function makeVideoFullscreen() {
+          var container = document.getElementById("video-container");
+          container.style.width = "100%";
+          container.style.height = "100%";
+          container.style.display = "flex";
+          container.style.justifyContent = "center";
+          container.style.alignItems = "center";
+        }
+
+        // Call the function to make video fullscreen on page load
+        makeVideoFullscreen();
+
+        // Handle resize events to keep video fullscreen
+        window.addEventListener("resize", makeVideoFullscreen);
+      });
     </script>
   </body>
 </html>
